# FerryFair

./: .gitignore  .gitignore.orig  .gitmodules  Authentication.cpp  Authentication.h  CMakeLists.txt  CMakeSettings.json  FFJSON.cpp  FFJSON.h  FerryStream.cpp  FerryStream.h  FerryStream.hpp  Makefile  README.md  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.h  WSServer.cpp  WSServer.h  WSServerLWS.cpp.bkp  WSServerLWS.h.bkp  b64HT.txt  config.ffjson  config.h.in  config.json  debug.cpp  debug.h  emacs.el  global.cpp  global.h  ide.el  init.conf  main.cpp  myconverters.cpp  myconverters.h  mystdlib.cpp  mystdlib.h  output.ffjson  (+1 more)
FerryFair.xcodeproj/: project.pbxproj
FerryFair.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FerryFair.xcodeproj/project.xcworkspace/xcuserdata/gowtham.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
FerryFair.xcodeproj/xcshareddata/xcschemes/: FerryFair.xcscheme
FerryFair.xcodeproj/xcuserdata/gowtham.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FerryFair.xcodeproj/xcuserdata/gowtham.xcuserdatad/xcschemes/: xcschememanagement.plist
debian/: changelog  control  copyright
debian/patches/: series  typocmakemacos
ferryfair.xcodeproj/: project.pbxproj
ferryfair.xcodeproj/project.xcworkspace/xcuserdata/gowtham.xcuserdatad/: UserInterfaceState.xcuserstate
ferryfair.xcodeproj/xcuserdata/gowtham.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ferryfair.xcodeproj/xcuserdata/gowtham.xcuserdatad/xcschemes/: ferryfair.xcscheme  xcschememanagement.plist
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
tests/: Base64Image.cpp  MJPEGHTadder.cpp  WSServerTest.c
